--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                                         <tbody><tr>
                                                             <td valign="top">
                                                                 <div style="height: 85px">
-                                                                    <a href="#" target="_blank">
+                                                                    <a href="http://intterminal.com/" target="_blank">
                                                                         <img border="0" src="src/inttbrand.png">
                                                                     </a>
                                                                 </div>
@@ -66,7 +66,7 @@
                                                                                                                     <tbody><tr>
                                                                                                                         <td valign="top">
                                                                                                                             <div style="height: 900px;">
-                                                                                                                                <a href="#" target="_blank">
+                                                                                                                                <a href="http://www.inttleisure.com/sri-lanka/" target="_blank">
                                                                                                                                     <img border="0" src="src/main_post.png" width="600" height="900" alt="Connect the way you want to. From home office to kitchen table to living room couch, Surface delivers the power to get it done. Shop now. Image of man working at desk with Surface device. Surface accessories sold separately." style="display: block; border: none; color: #000000; font-size: 12px; background-color: #f2f2f2; font-family: Arial;">
                                                                                                                                 </a>
                                                                                                                             </div>
@@ -106,7 +106,7 @@
                                                                                                                     <tbody><tr>
                                                                                                                         <td valign="top">
                                                                                                                             <div style="height: 450px;">
-                                                                                                                                <a href="#" target="_blank">
+                                                                                                                                <a href="http://intterminal.com/air-travel/" target="_blank">
                                                                                                                                     <img border="0" src="src/airTravel.png" width="600" height="450" alt="air travel: travelling the skies and beyond" style="display: block; border: none; color: #000000; font-size: 12px; background-color: #f2f2f2; font-family: Arial;">
                                                                                                                                 </a>
                                                                                                                             </div>
@@ -145,7 +145,7 @@
                                                                                                                     <tbody><tr>
                                                                                                                         <td valign="top">
                                                                                                                             <div style="height: 450px;">
-                                                                                                                                <a href="#" target="_blank">
+                                                                                                                                <a href="http://intterminal.com/intt-leisure/" target="_blank">
                                                                                                                                     <img border="0" src="src/leisure.png" width="600" height="450" alt="int leisure: explore sri lanka never before" style="display: block; border: none; color: #000000; font-size: 12px; background-color: #f2f2f2; font-family: Arial;">
                                                                                                                                 </a>
                                                                                                                             </div>
@@ -184,7 +184,7 @@
                                                                                                                     <tbody><tr>
                                                                                                                         <td valign="top">
                                                                                                                             <div style="height: 100px;">
-                                                                                                                                <a href="#" target="_blank">
+                                                                                                                                <a href="http://www.inttleisure.com/sri-lanka/" target="_blank">
                                                                                                                                     <img border="0" src="src/lable_plan.png" width="600" height="100" alt="Shop all Surface devices." style="display: block; border: none; color: #000000; font-size: 12px; background-color: #f2f2f2; font-family: Arial;">
                                                                                                                                 </a>
                                                                                                                             </div>
@@ -225,7 +225,7 @@
                                                                                                                     <tbody><tr>
                                                                                                                         <td valign="top">
                                                                                                                             <div style="height: 370px;">
-                                                                                                                                <a href="#" target="_blank">
+                                                                                                                                <a href="http://intterminal.com/consolidator/" target="_blank">
                                                                                                                                     <img border="0" src="src/consolidator.png" width="600" height="370" alt="The Microsoft Store Promise for Surface. Enjoy the benefits of buying your Surface from Microsoft Store. Fast, free shipping. 60-day return policy. 60-day price promise. 90 days free support. See all the benefits." style="display: block; border: none; color: #000000; font-size: 12px; background-color: #f2f2f2; font-family: Arial;">
                                                                                                                                 </a>
                                                                                                                             </div>
